SERVER-32369 fix invariant message in UUIDCatalog